[gd_scene load_steps=8 format=3 uid="uid://xniqt5ldhvis"]

[ext_resource type="Texture2D" uid="uid://lh4tyab8508y" path="res://icons/pricetag.svg" id="1_jiusk"]
[ext_resource type="Script" path="res://scenes_2d/hud/scripts/price_tag.gd" id="1_rp7cw"]
[ext_resource type="FontFile" uid="uid://cdccw3poh5c27" path="res://fonts/AlphaProta-G33Vm.ttf" id="2_e6ey1"]
[ext_resource type="Texture2D" uid="uid://ddp3f8s6hsbjf" path="res://scenes_2d/hud/builder_gem_thumbnail.png" id="4_rrbqv"]
[ext_resource type="Texture2D" uid="uid://cj8wykllwpe1h" path="res://scenes_2d/hud/magical_crystal_thumbnail.png" id="5_yviyx"]

[sub_resource type="LabelSettings" id="LabelSettings_84ilk"]
resource_local_to_scene = true
line_spacing = 0.0
font = ExtResource("2_e6ey1")
font_size = 24
font_color = Color(0.0313726, 0.937255, 0, 1)
outline_size = 3
outline_color = Color(0, 0.854902, 0.247059, 1)
shadow_size = 7
shadow_color = Color(0.823529, 1, 0.788235, 1)
shadow_offset = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_47odg"]
resource_local_to_scene = true
line_spacing = 0.0
font = ExtResource("2_e6ey1")
font_size = 24
font_color = Color(0.419608, 0, 0.647059, 1)
outline_size = 2
outline_color = Color(1, 0.556863, 1, 1)
shadow_size = 7
shadow_color = Color(1, 0.933333, 1, 1)
shadow_offset = Vector2(0, 0)

[node name="PriceTag" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 40.0
offset_top = -8.0
offset_right = 210.0
offset_bottom = 80.0
rotation = 0.624974
pivot_offset = Vector2(0, 46)
script = ExtResource("1_rp7cw")
magical_crystal_price = 1

[node name="Pricetag" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.392157)
position = Vector2(-2, 48)
rotation = -2.53054
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_jiusk")
offset = Vector2(-830, 690)

[node name="BuilderGemPrice" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.121096
anchor_top = 0.462711
anchor_right = 0.121096
anchor_bottom = 0.462711
offset_left = -3.00001
offset_top = -37.0
offset_right = 105.0
offset_bottom = -4.19617e-05
text = "120"
label_settings = SubResource("LabelSettings_84ilk")
horizontal_alignment = 2
vertical_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="BuilderGemThumbnail" type="Sprite2D" parent="."]
position = Vector2(149.986, 26.5753)
rotation = 0.261799
scale = Vector2(0.35, 0.35)
texture = ExtResource("4_rrbqv")

[node name="MagicalCrystalPrice" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.294118
anchor_top = 0.465909
anchor_right = 0.294118
anchor_bottom = 0.465909
offset_left = -32.0
offset_right = 76.0
offset_bottom = 37.0
text = "5
"
label_settings = SubResource("LabelSettings_47odg")
horizontal_alignment = 2
vertical_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="MagicalCrystalThumbnail" type="Sprite2D" parent="."]
position = Vector2(147.489, 64.1355)
rotation = 0.261799
scale = Vector2(0.25, 0.25)
texture = ExtResource("5_yviyx")
